--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
@@ -44,6 +44,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.2.7"
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.2.7",
+    "tailwindcss-question-mark": "^0.1.1"
   }
 }
